# Triangle

./: .gitmodules  CMakeLists.txt
gezzy/: CMakeLists.txt
gezzy/ecs/: CMakeLists.txt
gezzy/ecs/include/ecs/: world.hpp
gezzy/gezzy/: CMakeLists.txt  window.cpp  window.hpp
gezzy/glad/: CMakeLists.txt
lib/gezzy/: .gitmodules  CMakeLists.txt
lib/gezzy/include/gezzy/: input.hpp  window.hpp
lib/gezzy/lib/ecs/: CMakeLists.txt
lib/gezzy/lib/ecs/include/ecs/: component.hpp  componentstorage.hpp  entity.hpp
lib/gezzy/lib/glad/: CMakeLists.txt
lib/gezzy/lib/glad/include/glad/: glad.h
lib/gezzy/lib/glad/src/: glad.cpp
lib/gezzy/src/: CMakeLists.txt  input.cpp  window.cpp
src/: CMakeLists.txt  main.cpp
